# brain

./: BUILD.bazel  README.md  WORKSPACE  docker-compose.yaml  go.mod  go.sum  main.go
cli/: BUILD.bazel  main.go  peloton.go  root.go
clients/: BUILD.bazel  db.go  onepeloton.go
cmd/: BUILD.bazel  peloton.go  root.go
handlers/: BUILD.bazel  hello.go  networktraffic.go
models/: BUILD.bazel  mongo.go  networktraffic.go
service/: BUILD.bazel  onepeloton.go
