load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "peloton.go",
        "root.go",
    ],
    importpath = "github.com/ice1n36/brain/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//clients:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
