load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ice1n36/brain/cli",
    visibility = ["//visibility:public"],
    deps = ["//cmd:go_default_library"],
)

go_binary(
    name = "cli",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
