load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "onepeloton.go",
    ],
    importpath = "github.com/ice1n36/brain/clients",
    visibility = ["//visibility:public"],
    deps = [
        "//models:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo:go_default_library",
        "@org_mongodb_go_mongo_driver//mongo/options:go_default_library",
        "@org_uber_go_config//:go_default_library",
    ],
)
