load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "peloton.go",
        "root.go",
    ],
    importpath = "github.com/ice1n36/brain/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//clients:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_uber_go_config//:go_default_library",
    ],
)
