load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "hello.go",
        "networktraffic.go",
    ],
    importpath = "github.com/ice1n36/brain/handlers",
    visibility = ["//visibility:public"],
    deps = [
        "//clients:go_default_library",
        "//models:go_default_library",
        "@org_uber_go_config//:go_default_library",
    ],
)
