load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mongo.go",
        "networktraffic.go",
    ],
    importpath = "github.com/ice1n36/brain/models",
    visibility = ["//visibility:public"],
    deps = ["@org_mongodb_go_mongo_driver//bson/primitive:go_default_library"],
)
